--- a/.github/workflows/setup-environment-staging.yaml
+++ b/.github/workflows/setup-environment-staging.yaml
@@ -14,9 +14,9 @@ on:
       CLOUDFLARE_TOKEN:
         required: true
       TLS_CERT_BASE64:
-        required: false
+        required: true
       TLS_KEY_BASE64:
-        required: false
+        required: true
 
 jobs:
   terraform-apply:
