--- a/tests/infrastructure/xray_server_config/docker-compose.yaml
+++ b/tests/infrastructure/xray_server_config/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   xray-warp-ct-test-container:
     image: xia1997x/xray-warp-staging:staging
     container_name: xray-warp-ct-test-container
+    user: 0:1000
     restart: unless-stopped
     env_file:
       - .public.env
