--- a/.github/workflows/xray-warp-ct-connectivity-check.yaml
+++ b/.github/workflows/xray-warp-ct-connectivity-check.yaml
@@ -29,4 +29,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Start xray-warp-ct connectivity check
         run: |
-          ./${{ inputs.TESTS_DIRECTORY }}/client_server_test.sh
+          bash ./${{ inputs.TESTS_DIRECTORY }}/client_server_test.sh
