--- a/tests/infrastructure/xray_server_config/docker-compose.yaml
+++ b/tests/infrastructure/xray_server_config/docker-compose.yaml
@@ -2,11 +2,11 @@ services:
   xray-warp-ct-test-container:
     image: xia1997x/xray-warp-staging:staging
     container_name: xray-warp-ct-test-container
-    user: 0:1000
+    user: 1000:1000
     restart: unless-stopped
     env_file:
       - .public.env
     ports:
       - "443:443"
     volumes:
-      - ./config/certs:/xray_base/caddy_certs:ro
+      - ./config/caddy_config:/xray_base/caddy_config:ro
