--- a/tests/infrastructure/xray_server_config/docker-compose.yaml
+++ b/tests/infrastructure/xray_server_config/docker-compose.yaml
@@ -9,4 +9,4 @@ services:
     ports:
       - "443:443"
     volumes:
-      - ./config/caddy_config:/xray_base/caddy_config:ro
+      - ./config/caddy_config:/xray_base/caddy_config
