--- a/.github/workflows/build-staging.yaml
+++ b/.github/workflows/build-staging.yaml
@@ -35,6 +35,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           platforms: linux/arm64, linux/amd64
+          context: .
           push: true
           tags: |
             ${{ inputs.DOCKERHUB_USERNAME }}/${{ inputs.DOCKERHUB_REGISTRY }}:staging
