--- a/.github/workflows/build-staging.yaml
+++ b/.github/workflows/build-staging.yaml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - id: date
         run: echo "CURRENT_DATE=$(date "+%Y-%m-%d")" >> $GITHUB_OUTPUT
+      - name: Checkout
+        uses: actions/checkout@v3
       # Docker buildx steps
       - name: Login to Docker Hub
         uses: docker/login-action@v3
