--- a/.github/workflows/xray-warp-ct-release.yaml
+++ b/.github/workflows/xray-warp-ct-release.yaml
@@ -1,39 +1,38 @@
-name: docker-multiplatform-build-dev
+name: xray-warp-ct release CI
 
 on:
   push:
     branches:
-      - "dev"
+      - main
   workflow_dispatch:
 
 jobs:
   docker:
-    if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - name: Get the current date
-        run: | 
+        run: |
           echo "CURRENT_DATE=$(date "+%Y-%m-%d")" >> $GITHUB_ENV
-
+      - name: Checkout
+        uses: actions/checkout@v3
+      # Docker buildx steps
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/arm64, linux/amd64
+          platforms: linux/amd64,linux/arm64
+          context: app/
           push: true
           tags: |
-            ${{ vars.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REGISTRY }}:xray-warp-staging
-            ${{ vars.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REGISTRY }}:xray-warp-staging-${{ env.CURRENT_DATE }}
+            ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:latest
+            ${{ vars.DOCKERHUB_USERNAME }}/xray-warp:${{ env.CURRENT_DATE }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
