--- a/app/templates/xray_config_template.json
+++ b/app/templates/xray_config_template.json
@@ -27,6 +27,11 @@
     ],
     "outbounds": [
         {
+            "protocol": "freedom",
+            "settings": {},
+            "tag": "DIRECT"
+        },
+        {
             "protocol": "blackhole",
             "settings": {},
             "tag": "BLOCK"
