--- a/app/templates/xray_config_template.json
+++ b/app/templates/xray_config_template.json
@@ -14,7 +14,7 @@
                         "id": "${xray_uuid}"
                     }
                 ],
-                "decryption": "none"
+                "decryption": "${xray_decryption_key}"
             },
             "streamSettings": {
                 "network": "xhttp",
