--- a/app/templates/xray_config_template.json
+++ b/app/templates/xray_config_template.json
@@ -11,7 +11,8 @@
             "settings": {
                 "clients": [
                     {
-                        "id": "${xray_uuid}"
+                        "id": "${xray_uuid}",
+                        "flow": "xtls-rprx-vision"
                     }
                 ],
                 "decryption": "${xray_decryption_key}"
