--- a/tests/infrastructure/xray_server_config/templates/template.public.env
+++ b/tests/infrastructure/xray_server_config/templates/template.public.env
@@ -9,10 +9,9 @@ DOMAIN_NAME=${DOMAIN_NAME}
 XRAY_PATH=${XRAY_PATH}
 XRAY_UUID=${XRAY_UUID}
 CLOUDFLARE_AUTH_TOKEN=${CLOUDFLARE_AUTH_TOKEN}
+XRAY_ENCRYPTION_KEY=${XRAY_ENCRYPTION_KEY}
+XRAY_DECRYPTION_KEY=${XRAY_DECRYPTION_KEY}
 XRAY_VERSION=latest
-WGCF_VERSION=latest
 ENABLE_CADDY_LOG=False
 ENABLE_WARP=True
-ENABLE_IPV6=False
 PORT=443
-FINGERPRINT=chrome
