--- a/.github/workflows/xray-warp-ct-staging.yaml
+++ b/.github/workflows/xray-warp-ct-staging.yaml
@@ -34,6 +34,7 @@ jobs:
       TESTS_DIRECTORY: tests
       XRAY_PATH: xray-warp-test-path
       XRAY_UUID: eefc8f5f-f2fe-43b5-881c-653994d5a617
+      XRAY_ENCRYPTION_KEY: mlkem768x25519plus.native.0rtt.JBi3UQGpvuBLssXaGoDGB6HHiO4SH9qCqrD0IgMMSHY
     secrets:
       XRAY_HOST: ${{ secrets.DOMAIN_NAME }}
     needs: [setup-staging-environment]
