--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -28,8 +28,9 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 RUN apt update && apt install ca-certificates curl gnupg2 lsb-release libcap2-bin gosu dbus -y --no-install-recommends && \
     curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg && \
     echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/cloudflare-client.list && \
-    apt update && apt install cloudflare-warp -y && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    apt update && apt install cloudflare-warp --no-install-recommends -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/\* /tmp/\* /var/tmp/*
 
 RUN mkdir /xray_base/caddy_certs /run/dbus && \
     chmod +x /usr/bin/caddy && \
