testing size docker image

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,12 +2,19 @@
 ARG PYTHON_VERSION=3.13.11-slim-trixie
 ARG CADDY_BUILDER_VERSION=2.10.2-builder-alpine
 ARG CADDY_SERVER_VERSION=2.10.2-alpine
+ARG CLOUDFLARE_WARP_INSTALLER_IMAGE=trixie-slim
 
 # Build step for caddy web server
 FROM caddy:${CADDY_BUILDER_VERSION} AS caddy_builder
 RUN xcaddy build \
     --with github.com/caddy-dns/cloudflare
 FROM caddy:${CADDY_SERVER_VERSION}
+
+FROM debian:${CLOUDFLARE_WARP_INSTALLER_IMAGE} as cloudflare_warp_installer
+RUN apt update && apt install ca-certificates curl gnupg lsb-release libcap2-bin gosu dbus -y --no-install-recommends && \
+    curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/cloudflare-client.list && \
+    apt update && apt install cloudflare-warp --no-install-recommends -y
 
 # Build the base image for the xray_xhttp container
 FROM python:${PYTHON_VERSION}
@@ -18,19 +25,17 @@ ENV XDG_DATA_HOME=/xray_base/caddy_certs
 EXPOSE 443/tcp
 EXPOSE 443/udp
 COPY --from=caddy_builder /usr/bin/caddy /usr/bin/caddy
+COPY --from=cloudflare_warp_installer /usr/bin/warp-cli /usr/bin/warp-cli
+COPY --from=cloudflare_warp_installer /usr/bin/warp-svc /usr/bin/warp-svc
+COPY --from=cloudflare_warp_installer /usr/sbin/setcap /usr/sbin/setcap
+COPY --from=cloudflare_warp_installer /usr/sbin/gosu /usr/sbin/gosu
+COPY --from=cloudflare_warp_installer /usr/bin/dbus-* /usr/bin/dbus-*
 COPY . /xray_base/
 WORKDIR /xray_base
 
 RUN --mount=type=cache,target=/root/.cache/pip \
     --mount=type=bind,source=requirements.txt,target=requirements.txt \
     python -m pip install -r requirements.txt
-
-RUN apt update && apt install ca-certificates curl gnupg lsb-release libcap2-bin gosu dbus -y --no-install-recommends && \
-    curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg && \
-    echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/cloudflare-client.list && \
-    apt update && apt install cloudflare-warp --no-install-recommends -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN mkdir /xray_base/caddy_certs /run/dbus && \
     chmod +x /usr/bin/caddy && \
