--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+.vscode
 .env
 .venv
 env/
@@ -159,12 +160,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-
 # Config files used for testing
 app/caddy_config/*
 !app/caddy_config/.gitkeep
-app/wgcf/*
-!app/wgcf/.gitkeep
 app/xray_config/*
 !app/xray_config/.gitkeep
 !app/xray_config/xray_core/.gitkeep
