--- a/app/templates/xray_config_template.json
+++ b/app/templates/xray_config_template.json
@@ -11,16 +11,17 @@
             "settings": {
                 "clients": [
                     {
-                        "id": ""
+                        "id": "${xray_uuid}",
+                        "flow": "xtls-rprx-vision"
                     }
                 ],
-                "decryption": "none"
+                "decryption": "${xray_decryption_key}"
             },
             "streamSettings": {
                 "network": "xhttp",
                 "xhttpSettings": {
                     "mode": "auto",
-                    "path": "PATH-GOES-HERE"
+                    "path": "${xray_path}"
                 }
             }
         }
