--- a/tests/infrastructure/xray_server_config/docker-compose.yaml
+++ b/tests/infrastructure/xray_server_config/docker-compose.yaml
@@ -3,6 +3,10 @@ services:
     image: xia1997x/xray-warp-staging:staging
     container_name: xray-warp-ct-test-container
     restart: unless-stopped
+    cap_add:
+      - NET_ADMIN
+    devices:
+      - /dev/net/tun:/dev/net/tun
     env_file:
       - .public.env
     ports:
