--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,10 +12,12 @@ FROM caddy:${CADDY_SERVER_VERSION}
 
 # Install step for cloudflare-warp
 FROM debian:${CLOUDFLARE_WARP_INSTALLER_IMAGE} AS cloudflare_warp_installer
-RUN apt update && apt install ca-certificates curl gnupg2 lsb-release libcap2-bin gosu -y --no-install-recommends && \
+RUN apt update && apt install ca-certificates curl gnupg2 lsb-release libcap2-bin gosu binutils -y --no-install-recommends && \
     curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg && \
     echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/cloudflare-client.list && \
-    apt update && apt install cloudflare-warp --no-install-recommends -y
+    apt update && apt install cloudflare-warp --no-install-recommends -y && \
+    strip --strip-unneeded /usr/bin/warp-cli && \
+    strip --strip-unneeded /usr/bin/warp-svc
 
 # Build the base image for the xray_xhttp container
 FROM python:${PYTHON_VERSION}
@@ -42,9 +44,8 @@ RUN apt update && apt install dbus iproute2 nftables libpcap0.8 libnspr4 libnss3
 
 RUN --mount=type=cache,target=/root/.cache/pip \
     --mount=type=bind,source=requirements.txt,target=requirements.txt \
-    python -m pip install -r requirements.txt
-
-RUN mkdir /xray_base/caddy_certs /run/dbus && \
+    python -m pip install -r requirements.txt && \
+    mkdir /xray_base/caddy_certs /run/dbus && \
     chmod +x /usr/bin/caddy && \
     setcap cap_net_bind_service=+ep /usr/bin/caddy && \
     mv entrypoint.sh /usr/local/bin && \
