--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -11,13 +11,13 @@ RUN xcaddy build \
 FROM caddy:${CADDY_SERVER_VERSION}
 
 # Install step for cloudflare-warp
-FROM debian:${CLOUDFLARE_WARP_INSTALLER_IMAGE} AS cloudflare_warp_installer
-RUN apt update && apt install ca-certificates curl gnupg2 lsb-release libcap2-bin gosu binutils -y --no-install-recommends && \
-    curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg && \
-    echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/cloudflare-client.list && \
-    apt update && apt install cloudflare-warp --no-install-recommends -y && \
-    strip --strip-unneeded /usr/bin/warp-cli && \
-    strip --strip-unneeded /usr/bin/warp-svc
+#FROM debian:${CLOUDFLARE_WARP_INSTALLER_IMAGE} AS cloudflare_warp_installer
+#RUN apt update && apt install ca-certificates curl gnupg2 lsb-release libcap2-bin gosu binutils -y --no-install-recommends && \
+#    curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg && \
+#    echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/cloudflare-client.list && \
+#    apt update && apt install cloudflare-warp --no-install-recommends -y && \
+#    strip --strip-unneeded /usr/bin/warp-cli && \
+#    strip --strip-unneeded /usr/bin/warp-svc
 
 # Build the base image for the xray_xhttp container
 FROM python:${PYTHON_VERSION}
@@ -34,6 +34,13 @@ COPY --from=cloudflare_warp_installer /usr/sbin/setcap /usr/sbin/setcap
 COPY --from=cloudflare_warp_installer /usr/sbin/gosu /usr/sbin/gosu
 COPY . /xray_base/
 WORKDIR /xray_base
+
+RUN apt update && apt install ca-certificates curl gnupg2 lsb-release libcap2-bin gosu binutils -y --no-install-recommends && \
+    curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | gpg --yes --dearmor --output /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/cloudflare-client.list && \
+    apt update && apt install cloudflare-warp --no-install-recommends -y && \
+    strip --strip-unneeded /usr/bin/warp-cli && \
+    strip --strip-unneeded /usr/bin/warp-svc
 
 RUN apt update && apt install dbus iproute2 nftables libpcap0.8 libnspr4 libnss3 --no-install-recommends -y && \
     apt clean && \
